--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,8 @@
 MONGODB_URL = mongodb://127.0.0.1:27017/mern-movie-2022
+# Q2tbGBBA0auZrMUY
+# MONGODB_URL = mongodb+srv://extencezone:<password>@cluster0.cmvtsvs.mongodb.net/
 PORT=5000
 TOKEN_SECRET=yourandom
 TMBDB_BASE_URL=https://api.themoviedb.org/3/
 TMDB_KEY= 887bfbb70922eb9cc384bd73217db7c4
+
